syntax = "proto3";

option csharp_namespace = "TaskService.gRPC";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
 // rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
//  rpc GetTasks (GetTaskRequest) returns (GetTaskResponse);
//  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
//  rpc GetTaskById (GetTaskByIdRequest) returns (GetTaskByIdResponse);
}

message CreateTaskRequest{
    string title = 1;
    string description = 2;
    string dueDate = 3;
    string assignedTo = 4;
    string projectId = 5;
    int32 taskStatus = 6;
    string createdBy = 7;
    string updatedBy = 8;
    repeated Subtask subtasks = 9;
    repeated Comment comments = 10;
}

message CreateTaskResponse{
    string id = 1;
    string title = 2;
    string description = 3;
    string dueDate = 4;
    string assignedTo = 5;
    string projectId = 6;
    int32 taskStatus = 7;
    string createdBy = 8;
    string updatedBy = 9;
    string createdAt = 10;
    string updatedAt = 11;
    repeated Subtask subtasks = 12;
    repeated Comment comments = 13;
}

message Subtask{
    string id = 1;
    string title = 2;
    string taskId = 3;
    bool isComplited = 4;
}

message Comment{
    string id = 1;
    string content = 2;
    string taskId = 3;
    string commentedBy = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

